color and structure change

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,8 +17,8 @@ html{
 body {
 
   font-size: 1.6rem;
-  background: #FBE5C8;
-  color: #040404;
+  background: #001A23;
+  color: #EAEAEA;
 }
  
 
